--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-usestateref": "^1.0.8",
     "sweetalert2": "^11.7.19",
     "web-vitals": "^2.1.4"
   },
